# log4cplus

./: .bzrignore  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ConfigureChecks.cmake  INSTALL  LICENSE  Log4CPlusCPack.cmake  Makefile.am  Makefile.am.def  Makefile.am.tpl  Makefile.in  NEWS  README  README.md  SECURITY.md  TODO  acinclude.m4  aclocal.m4  appveyor.yml  ar-lib  autogen.sh  compile  config.sub  configure  configure.ac  configure.in  depcomp  doxygen.config  log4cplus.spec  log4cplus.unicode.v110.windesktop.msvcstl.static.rt-dyn.autopkg  ltmain.sh  (+4 more)
include/: Makefile.am  Makefile.in
include/log4cplus/: appender.h  asyncappender.h  callbackappender.h  category.h  clfsappender.h  clogger.h  config-macosx.h  config-win32.h  config.h.cmake.in  config.h.in  config.hxx  config.hxx.in  configurator.h  consoleappender.h  exception.h  fileappender.h  fstreams.h  hierarchy.h  hierarchylocker.h  initializer.h  layout.h  log4cplus.h  log4judpappender.h  logger.h  loggingmacros.h  loglevel.h  mdc.h  msttsappender.h  ndc.h  nteventlogappender.h  nullappender.h  opentelemetryappender.h  priority.h  qt4debugappender.h  qt5debugappender.h  qt6debugappender.h  qt6messagehandler.h  socketappender.h  streams.h  syslogappender.h  (+7 more)
log4cplus/: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  log4cplus.spec  ltmain.sh
log4cplus/docs/: doxygen.config  webpage_doxygen.config  webpage_header.html
log4cplus/loggingserver/: Makefile.am  Makefile.in  loggingserver.cxx
log4cplus/m4/: ax_cflags_warn_all.m4  ax_declspec.m4
log4cplus/msvc/: log4cplus.dsw
log4cplus/msvc6/: log4cplus.dsw  log4cplus_dll.dsp  log4cplus_dll_uni.dsp  log4cplus_static.dsp  log4cplus_uni.dsw  loggingserver.dsp
log4cplus/msvc8/: log4cplus.sln  log4cplus.vsprops  log4cplus_dll.vcproj  log4cplus_static.vcproj  log4cplus_uni.sln  loggingserver.vcproj  loggingserver.vsprops
log4cplus/src/: Makefile.am  Makefile.in  appender.cxx  appenderattachableimpl.cxx  categoryimpl.cxx  configurator.cxx  consoleappender.cxx  factory.cxx  fileappender.cxx  filter.cxx  global-init.cxx  hierarchy.cxx  hierarchylocker.cxx  layout.cxx  logger.cxx  loggerimpl.cxx  loggingevent.cxx  loggingserver.cxx  loglevel.cxx  loglog.cxx  logloguser.cxx  ndc.cxx  nteventlogappender.cxx  nullappender.cxx  objectregistry.cxx  patternlayout.cxx  pointer.cxx  priority.cxx  property.cxx  propertyconfig.cxx  rootlogger.cxx  sleep.cxx  socket-unix.cxx  socket-win32.cxx  socket.cxx  socketappender.cxx  socketbuffer.cxx  strftime.cxx  stringhelper.cxx  syncprims.cxx  (+5 more)
log4cplus/tests/: CMakeLists.txt  Makefile.am  Makefile.in
loggingserver/: CMakeLists.txt  Makefile.am  Makefile.in  loggingserver.cxx
opentelemetryappender/: CMakeLists.txt  Makefile.am  opentelemetryappender.cxx
qt4debugappender/: CMakeLists.txt  Makefile.am  Makefile.in  qt4debugappender.cxx
qt5debugappender/: CMakeLists.txt  Makefile.am  qt5debugappender.cxx
qt6debugappender/: CMakeLists.txt  Makefile.am  qt6debugappender.cxx
simpleserver/: CMakeLists.txt  Makefile.am  loggingserver.cxx
src/: CMakeLists.txt  Makefile.am  Makefile.in  appender.cxx  appenderattachableimpl.cxx  asyncappender.cxx  boost_tests.cxx  callbackappender.cxx  category.cxx  categoryimpl.cxx  clfsappender.cxx  clogger.cxx  configurator.cxx  connectorthread.cxx  consoleappender.cxx  cygwin-win32.cxx  env.cxx  eventcounter.cxx  exception.cxx  factory.cxx  fileappender.cxx  fileinfo.cxx  filter.cxx  global-init.cxx  hierarchy.cxx  hierarchylocker.cxx  layout.cxx  lockfile.cxx  log4judpappender.cxx  logger.cxx  loggerimpl.cxx  loggingevent.cxx  loggingmacros.cxx  loggingserver.cxx  loglevel.cxx  loglog.cxx  logloguser.cxx  mdc.cxx  msttsappender.cxx  ndc.cxx  (+30 more)
swig/python/: Makefile.am  Makefile.in
tests/: CMakeLists.txt  Makefile.am  Makefile.am.def  Makefile.am.tests  Makefile.am.tpl  Makefile.in  appender_test.at  atlocal.in  configandwatch_test.at  configure.m4  customloglevel_test.at  fileappender_test.at  filter_test.at  headers.at  hierarchy_test.at  local.at  loglog_test.at  ndc_test.at  opentelemetry.properties.in  ostream_test.at  patternlayout_test.at  performance_test.at  priority_test.at  propertyconfig_test.at  qt6messagehandler_test.at  testsuite  testsuite.at  thread_test.at  timeformat_test.at
tests/appender_test/: CMakeLists.txt  Makefile.am  Makefile.in  expout  main.cxx
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/configandwatch_test/: CMakeLists.txt  Makefile.am  Makefile.in  log4cplus.properties.1  log4cplus.properties.2  main.cxx
tests/custom_loglevel/: customloglevel.cxx
tests/customloglevel_test/: CMakeLists.txt  Makefile.am  Makefile.in  customloglevel.cxx  customloglevel.h  func.cxx  main.cxx
tests/fileappender_test/: CMakeLists.txt  Makefile.am  Makefile.in  main.cxx
tests/filter_test/: CMakeLists.txt  Makefile.am  Makefile.in  expout  main.cxx
tests/hierarchy_test/: CMakeLists.txt  Makefile.am  Makefile.in  expout  main.cxx
tests/loglog_test/: CMakeLists.txt  Makefile.am  Makefile.in  experr  expout  main.cxx
tests/ndc_test/: Makefile.am  Makefile.in  expout  main.cxx
tests/ostream_test/: CMakeLists.txt  Makefile.am  Makefile.in  expout  main.cxx
tests/patternlayout_test/: CMakeLists.txt  Makefile.am  Makefile.in  main.cxx
tests/performance_test/: CMakeLists.txt  Makefile.am  Makefile.in  log4cplus.properties  log4cplus.properties.in  main.cxx
tests/priority_test/: CMakeLists.txt  Makefile.am  Makefile.in  func.cxx  main.cxx
tests/propertyconfig_test/: CMakeLists.txt  Makefile.am  Makefile.in  log4cplus.properties  log4cplus.properties.in  main.cxx
tests/qt6messagehandler_test/: CMakeLists.txt  Makefile.am  Makefile.am.inc  expout  main.cxx
tests/socket_test/: Makefile.am  Makefile.in  main.cxx
tests/thread_test/: CMakeLists.txt  Makefile.am  Makefile.in  main.cxx
tests/timeformat_test/: CMakeLists.txt  Makefile.am  Makefile.in  main.cxx
(+1991 files in other folders)
